--- a/Xamarin_AndroidTeste1/Xamarin_AndroidTeste1.csproj
+++ b/Xamarin_AndroidTeste1/Xamarin_AndroidTeste1.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="DbConnection.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="OutraActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
