Add Layout Outra.axml
Just adding to the code the Layout Outra.axml

--- a/Xamarin_AndroidTeste1/Xamarin_AndroidTeste1.csproj
+++ b/Xamarin_AndroidTeste1/Xamarin_AndroidTeste1.csproj
@@ -60,6 +60,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="GettingStarted.Xamarin" />
+    <AndroidResource Include="Resources\layout\Outra.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
