--- a/Xamarin_AndroidTeste1/Xamarin_AndroidTeste1.csproj
+++ b/Xamarin_AndroidTeste1/Xamarin_AndroidTeste1.csproj
@@ -57,6 +57,7 @@
     <Compile Include="OutraActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Outra.axml">
